--- a/objreader/objreader.csproj
+++ b/objreader/objreader.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{301ca4f1-36e2-4e34-b0c7-1e0c53cf78e1}</ProjectGuid>
+    <ProjectGuid>{301CA4F1-36E2-4E34-B0C7-1E0C53CF78E1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>objreader</RootNamespace>
@@ -107,8 +107,20 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Bounds.cs" />
+    <Compile Include="Context.cs" />
+    <Compile Include="Facade.cs" />
+    <Compile Include="INode.cs" />
+    <Compile Include="Material.cs" />
+    <Compile Include="Node.cs" />
+    <Compile Include="NodeType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reader.cs" />
+    <Compile Include="Texture.cs" />
+    <Compile Include="Utils.cs" />
+    <Compile Include="Vec2.cs" />
+    <Compile Include="Vec3.cs" />
+    <Compile Include="Vec4.cs" />
     <EmbeddedResource Include="Properties\objreader.rd.xml" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
